# applyMate

./: .gitignore  deploy.sh  manage.py  pyproject.toml  requirements.txt  vercel.json
applyMate/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  filters.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_rename__type_application_type.py  0003_application_company_logo.py  0004_alter_application_description.py  0005_application_source.py  0006_application_company_logo_uri_and_more.py  0007_remove_application_company_logo_and_more.py  0008_application_job_link.py  0009_alter_application_job_link_alter_application_level.py  0010_alter_application_feedback_and_more.py
templates/: create.html  detail.html  edit.html  list.html
